Adicionando funcionalidade do cadastro de Administrador

--- a/HW_Hidreletrica/Telas/Tela_emp/Cadastro_Administrador.resx
+++ b/HW_Hidreletrica/Telas/Tela_emp/Cadastro_Administrador.resx
@@ -61,7 +61,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAA/7JJREFUeF7svQVgFVf6/v/72n+97e7WKRZ3J0BwL+6SECW4ExKsLVBaNAkRHAot
+        vAAADrwBlbxySQAA/7JJREFUeF7svQVgFVf6/v/72n+97e7WKRZ3J0BwL+6SECW4ExKsLVBaNAkRHAot
         hQqFQotL0Li7u7u7Pv/3nZmbhBBa2lLa3Z0HnszcuXPHzsz5nPfMmTP/T5YsWbJkyZIlS5YsWbJkyZIl
         S5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJk
         yZIlS5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJkyZIlS5YsWbJkyZIlS5Ys
@@ -2599,5 +2599,8 @@
   </metadata>
   <metadata name="errorProvider3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>277, 17</value>
+  </metadata>
+  <metadata name="errorProvider4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>407, 17</value>
   </metadata>
 </root>
