--- a/HW_Hidreletrica/Properties/Resources.resx
+++ b/HW_Hidreletrica/Properties/Resources.resx
@@ -136,9 +136,6 @@
   <data name="Consumo-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Consumo-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="img-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img-logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="clienteIcone" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\clienteIcone.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -168,5 +165,11 @@
   </data>
   <data name="telefone icone" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\telefone icone.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="img-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img-logo.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo__2_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo (2).jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
